--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "framer-motion": "^12.34.0",
         "lucide-react": "^0.563.0",
+        "motion": "^12.34.0",
         "next": "16.1.6",
         "radix-ui": "^1.4.3",
         "react": "19.2.3",
         "react-dom": "19.2.3",
+        "rough-notation": "^0.5.1",
+        "roughjs": "^4.6.6",
         "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
